src/index.css
:root {
  --imgSize: 80vh;
  --baseline: 1.5rem;
  --green: #11362e;
  --peach: #c9a587;
  --foreground: var(--green);
  --background: var(--peach);
}

@media (orientation: portrait) {
  :root {
    --imgSize: calc(100vw - calc(var(--baseline) * 2));
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: var(--peach);
    --background: var(--green);
  }
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  position: relative;
}

html {
  background-color: var(--background);
  color: var(--foreground);
  font: 100%/1.5 "Work Sans", sans-serif;
  font-weight: 500;
  height: 100%;
  overflow: hidden;
}

body {
  display: flex;
  height: 100%;
  align-items: center;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
}

@media (orientation: portrait) {
  html {
    overflow: initial;
  }

  body {
    height: auto;
  }
}

@media (max-width: 40rem) {
  html {
    font-size: 87.5%;
  }
}

a {
  color: inherit;
  text-decoration-color: rgba(255, 255, 255, 0.5);
  text-decoration-skip-ink: auto;
  transition: 0.2s ease;
  transition-property: color, text-decoration-color;
}

a:hover,
a:focus {
  text-decoration-color: currentColor;
}

p {
  margin-bottom: calc(var(--baseline) / 2);
}

.frac {
  font-feature-settings: "frac" 1;
}

.caps {
  font-feature-settings: "smcp" 1, "c2sc" 1;
}

.site-title {
  font-weight: 400;
  font-size: 1rem;
}

.site-root {
  display: flex;
  flex-flow: column nowrap;
}

.site-content {
  flex: 1 0 auto;
  display: flex;
  align-items: baseline;
}

.pane {
  flex: 1 1 auto;
  width: auto;
  vertical-align: top;
  padding: calc(var(--baseline) / 2);
}

@media (orientation: portrait) {
  .site-root {
    flex-flow: column wrap;
    max-width: 100%;
  }

  .site-content {
    flex-direction: column;
  }

  .pane {
    height: auto;
    width: auto;
    margin: auto;
  }
}

.pane--text {
  align-self: flex-start;
  flex: 0 0 35rem;
}

@media (orientation: portrait) {
  .pane--text {
    flex-basis: auto;
  }
}

.pane__image {
  display: flex;
  margin-bottom: calc(var(--baseline) / 2);
  max-height: 80vh;
  transition: 0.2s ease;
  transition-property: transform, opacity;
}

.image__img {
  display: block;
  width: 100%;
  flex: 0 0 100%;
  object-fit: cover;
  /* 100vh - (header padding, header text, metadata text, metadata padding */
  height: var(--imgSize);

  transition: 0.3s ease opacity;
  opacity: 1;
}

@media (orientation: portrait) {
  .image__img {
    width: auto;
    max-width: 100%;
    height: auto;
  }
}

.image__img.is-not-loaded {
  opacity: 0;
}

